Upon clicking on some of the menu items, the banner gets wrongly resized (on FF at least) #13 * we either always or never display the scrollbar to fix that issue!

--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -4,6 +4,7 @@ body {
 }
 
 body {
+  overflow-y: scroll;
   margin: 0 8px 0 8px;
   background-color: white;
   text-align: left;
